<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.heartbits.Opening">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="119dp"
            android:layout_height="125dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="132dp"
            android:layout_marginStart="133dp"
            android:layout_marginTop="52dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="192dp"
            android:layout_height="41dp"
            android:layout_marginBottom="33dp"
            android:layout_marginEnd="96dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="40dp"
            android:text="@string/babyname"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="66dp"
            android:layout_marginEnd="97dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="75dp"
            android:text="@string/borndate"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="76dp"
            android:text="@string/sex"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />




        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Menu"
            tools:layout_editor_absoluteX="297dp"
            tools:layout_editor_absoluteY="463dp"
            android:onClick="abremenu"/>


</android.support.constraint.ConstraintLayout>